tests/fixtures/invalid/set_bitand_str.py
# Cannot bitwise AND Set[int] and Str
x: set[int] = {1, 2, 3} & "hello"
